<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context=".OfficialSignUp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FF5722"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/textViewHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/head_signup"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingTop="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearHeading"
            app:layout_constraintVertical_bias="0.0">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/linearMain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.3">

                    <TextView
                        android:id="@+id/textViewName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/name"
                        android:textColor="#000000" />

                    <EditText
                        android:id="@+id/editTextName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/hint_name"
                        android:inputType="text"
                        android:textAlignment="viewStart"
                        android:textColorHint="#80000000" />

                    <TextView
                        android:id="@+id/textViewID"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/id"
                        android:textColor="#000000" />

                    <EditText
                        android:id="@+id/editTextID"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/hint_id"
                        android:inputType="text"
                        android:textAlignment="viewStart"
                        android:textColorHint="#80000000" />

                    <TextView
                        android:id="@+id/textViewEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/head_email"
                        android:textColor="#000000" />

                    <EditText
                        android:id="@+id/editTextEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/hint_email"
                        android:inputType="textEmailAddress"
                        android:textAlignment="viewStart"
                        android:textColorHint="#80000000" />

                    <TextView
                        android:id="@+id/textViewSecurityLevel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/secLevel"
                        android:textColor="#000000" />

                    <Spinner
                        android:id="@+id/spinnerSecLevel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:entries="@array/secLevel"
                        android:spinnerMode="dropdown" />

                    <TextView
                        android:id="@+id/textViewPin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/head_pin"
                        android:textColor="#000000" />

                    <EditText
                        android:id="@+id/editTextPin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/hint_pin"
                        android:inputType="numberPassword"
                        android:maxLength="8"
                        android:textAlignment="viewStart"
                        android:textColorHint="#80000000" />

                    <Button
                        android:id="@+id/buttonSignUp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/head_signup" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="30dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearMain"
                    app:layout_constraintVertical_bias="0.19999999">

                    <TextView
                        android:id="@+id/textViewAccount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/already_signed"
                        android:textAlignment="center"
                        android:textColor="#000000"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationViewLoading"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="#FFFFFF"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/lottie_loading_simple" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>